--- a/web/index.html
+++ b/web/index.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <!--
-    If you are serving your web app in a path other than the root, change the
-    href value below to reflect the base path you are serving from.
-
-    The path provided below has to start and end with a slash "/" in order for
-    it to work correctly.
-
-    For more details:
-    * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
-  -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO Meta -->
+  <meta name="description" content="Fluoverse - Learn Spanish by Living It. AI-powered conversations. Real-world language learning.">
+  <meta name="keywords" content="Fluoverse, Spanish Learning, AI Tutor, Language Learning, Real Conversations">
+  <meta name="author" content="Fluoverse Team">
+
+  <!-- Open Graph Meta (for WhatsApp, Facebook previews) -->
+  <meta property="og:title" content="Fluoverse - Learn the Language by Living It!">
+  <meta property="og:description" content="Experience real-world Spanish conversations powered by AI.">
+  <meta property="og:image" content="https://fluoverse.com/assets/Fluoverse_Logo.png">
+  <meta property="og:url" content="https://fluoverse.com">
+  <meta property="og:type" content="website">
+
+  <!-- Twitter Card Meta -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Fluoverse - Learn the Language by Living It!">
+  <meta name="twitter:description" content="Experience real-world Spanish conversations powered by AI.">
+  <meta name="twitter:image" content="https://fluoverse.com/assets/Fluoverse_Logo.png">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="fluoverse_landing_page">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta name="apple-mobile-web-app-title" content="Fluoverse">
+  <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <!-- Favicon icons -->
+  <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" href="icons/favicon.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="icons/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="512x512" href="icons/android-chrome-512x512.png">
 
-  <title>fluoverse_landing_page</title>
+  <!-- Web Manifest -->
   <link rel="manifest" href="manifest.json">
+
+  <title>Fluoverse</title>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
