--- a/web/index.html
+++ b/web/index.html
@@ -34,7 +34,7 @@
   <!-- Favicon icons -->
   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" href="icons/favicon.png">
+  <link rel="icon" type="image/png" href="icons/favicon.ico">
   <link rel="icon" type="image/png" sizes="192x192" href="icons/android-chrome-192x192.png">
   <link rel="icon" type="image/png" sizes="512x512" href="icons/android-chrome-512x512.png">
 
