--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,7 @@
 
   <!-- Web Manifest -->
   <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   <title>Fluoverse</title>
 </head>
