--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,16 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
   <title>Fluoverse</title>
+
+    <!-- ✅ Microsoft Clarity Tracking -->
+  <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "s0zxee5muw");
+  </script>
+  
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
